# LangGraph

./: .gitignore  README.md
projects/agentic-rag/: README.md  preprocess.py  pyproject.toml  rag.py
projects/claude/: main.py  pyproject.toml
projects/deepseek/: agents.py  instructions.txt  main.py
projects/deepseek-multiagent-fast copy/: deepseek_tools2.py
projects/gemini/: main.py
projects/grok/: main.py  main_xai_docs.py  main_xai_wrapper.py
projects/langgraph-react/: README.md  main.py  pyproject.toml
projects/reflection-agent/: README.md  chains.py  main.py  pyproject.toml
projects/reflexion-agent/: README.md  chains.py  full_output.txt  main.py  response.txt
