[tool.poetry]
name = "reflection-agent"
version = "0.1.0"
description = "Reflection agent with LangGraph"
authors = ["David Gadyan <davidgadyan92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
black = "^24.4.2"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langgraph = "^0.0.69"
grandalf = "^0.8"
langserve = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
